load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/puncorp/pung",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "pung",
    srcs = ["main.go"],
    deps = [":go_default_library"],
)