load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/puncorp/pung",
)

go_binary(
    name = "pung",
    srcs = ["main.go"],
    deps = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "pung_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)